fix for multi-columns on mobile

--- a/assets/src/css/pages/_.scss
+++ b/assets/src/css/pages/_.scss
@@ -1,5 +1,7 @@
 main.page {
 
+	font-size: 1rem;
+
 	.post-edit-link {
 		position: absolute;
 		right: 0;
