--- a/assets/src/css/template-parts/masthead/menu.scss
+++ b/assets/src/css/template-parts/masthead/menu.scss
@@ -24,7 +24,7 @@
 
 	transition: all linear 0.3s;
 
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 
 	@media (max-width: map-deep($widths, "medium")) {
 		background-image:
